force-app/main/default/objects/LogEvent__e/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Name of the Apex Class from where the logging event was fired.</description>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>