force-app/main/default/objects/LogEvent__e/fields/ColumnNumber__c.field-meta.xml
<CustomField>
    <fullName>ColumnNumber__c</fullName>
    <label>Column Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>