force-app/main/default/objects/LogEvent__e/fields/DisplayType__c.field-meta.xml
<CustomField>
    <fullName>DisplayType__c</fullName>
    <defaultValue>&quot;standard&quot;</defaultValue>
    <label>Display Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>